--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "concurrently": "^4.0.1",
     "electron": "^2.0.8",
     "electron-builder": "^20.28.4",
+    "prettier": "^1.14.2",
     "wait-on": "^3.0.1"
   },
   "build": {
@@ -34,5 +35,11 @@
     "directories": {
       "buildResources": "assets"
     }
+  },
+  "prettier": {
+    "printWidth": 150,
+    "tabWidth": 4,
+    "bracketSpacing": true,
+    "arrowParens": "always"
   }
 }
