--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "public/electron.js",
   "homepage": "./",
   "dependencies": {
+    "@material-ui/core": "^3.0.3",
     "electron-is-dev": "^0.3.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
