--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^3.0.3",
+    "@material-ui/icons": "^3.0.1",
     "electron-is-dev": "^0.3.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
