--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "@material-ui/core": "^3.0.3",
         "@material-ui/icons": "^3.0.1",
         "electron-is-dev": "^0.3.0",
+        "mobx": "^5.8.0",
+        "mobx-react": "^5.4.3",
         "react": "^16.5.0",
         "react-dom": "^16.5.0",
         "react-scripts": "1.1.5"
